program translations: update Chinese Traditional (Traiwan)

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-04-26 23:25+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Dian Li <xslidian@gmail.com>, 2020,2022\n"
+"Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2012,2020-2022\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_TW/)\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
@@ -1748,7 +1748,7 @@ msgstr "命令行(&C)："
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:102
 #, no-c-format
 msgid "&Configure available languages"
-msgstr "配置可用语言(&C)"
+msgstr "配置可用的語言(&C)"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:209
 #, no-c-format
@@ -6240,7 +6240,7 @@ msgstr "解析 '{0}' 中的標籤發生錯誤: 缺少一些必須的元件。\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:926
 #, no-c-format
 msgid "Error playing audio"
-msgstr "播放音频出错"
+msgstr "播放音訊時出錯"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -6466,7 +6466,7 @@ msgstr "從 Theora 視訊頭中擷取外觀比例資訊並設定顯示尺寸為 
 #: src/output/p_avc_hevc_es.cpp:162
 #, no-c-format
 msgid "Extracted the aspect ratio information from the video bitstream and set the display dimensions to {0}/{1}.\n"
-msgstr "从视频码流中提取宽高比信息，并将显示尺寸设为 {0}/{1}。\n"
+msgstr "從視訊位流中擷取外觀比例資訊並設定顯示尺寸為 {0}/{1}。\n"
 
 #: src/extract/extract_cli_parser.cpp:139
 #, no-c-format
@@ -7579,7 +7579,7 @@ msgstr "資訊"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:397
 #, no-c-format
 msgid "Information & Warnings:"
-msgstr "信息 & 警告:"
+msgstr "訊息 & 警告:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -8252,7 +8252,7 @@ msgstr "合併到在目錄 \"%2\" 中的檔案 \"%1\""
 #: src/mkvtoolnix-gui/info/tab.cpp:244
 #, no-c-format
 msgid "Loading…"
-msgstr "載入中..."
+msgstr "載入中…"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2116
 #, no-c-format
@@ -8602,12 +8602,12 @@ msgstr "模式"
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:389
 #, no-c-format
 msgid "Modif&y selected track"
-msgstr "修改选中的轨道(&Y)"
+msgstr "修改選中的軌道(&Y)"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:758
 #, no-c-format
 msgid "Modif&y selected tracks"
-msgstr "修改选中的轨道(&Y)"
+msgstr "修改選中的軌道(&Y)"
 
 #: src/propedit/options.cpp:185
 #, no-c-format
@@ -10810,7 +10810,7 @@ msgstr "選擇可執行程式"
 #: src/mkvtoolnix-gui/util/file_dialog.cpp:125
 #, no-c-format
 msgid "Select existing file"
-msgstr "选择现有文件"
+msgstr "選擇已有檔案"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:302
 #, no-c-format
@@ -10863,7 +10863,7 @@ msgstr "選擇要用來寫入字幕檔或章節資訊的字元集。"
 #: src/mkvtoolnix-gui/merge/tool.cpp:265
 #, no-c-format
 msgid "Set &language"
-msgstr "设置语言(&L)"
+msgstr "設置語言(&L)"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:1828
 #, no-c-format
@@ -11865,7 +11865,7 @@ msgstr "附件 ({0}) 太大 ({1})。"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:912
 #, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "无法回放音频文件 ｢%1｣。"
+msgstr "無法播放音訊檔案 ｢%1｣。"
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
@@ -12022,7 +12022,7 @@ msgstr "已建立檔案日期。"
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:33
 #, no-c-format
 msgid "The default is 'file' with 'track' being an alternative mode."
-msgstr "預設的 '檔案' 的 '軌道' 已成為複寫模式。"
+msgstr "預設模式為 ｢檔案｣ (file)，也可以改為 ｢軌道｣ (track) 模式。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
@@ -12579,7 +12579,7 @@ msgstr "作業已加入到作業佇列。"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "语言「%1」已被弃用。"
+msgstr "語言「%1」已被棄用。"
 
 #: src/input/r_usf.cpp:106
 #, no-c-format
@@ -12912,7 +12912,7 @@ msgstr "可是別的格式為 'YYYY-mm-ddTHH:MM:SS+zz:zz': 年-月-日-字母'T'
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:466
 #, no-c-format
 msgid "The region '%1' is deprecated."
-msgstr "地区「%1」已被弃用。"
+msgstr "區域「%1」已被棄用。"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
@@ -12942,7 +12942,7 @@ msgstr "兩音訊軌的取樣頻率不同: {0} 與 {1}"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:456
 #, no-c-format
 msgid "The script '%1' is deprecated."
-msgstr "文字「%1」已被弃用。"
+msgstr "文字「%1」已被棄用。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
@@ -13292,7 +13292,7 @@ msgstr "這些數值可在合併工具中輕鬆選擇。"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:472
 #, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "变体「%1」已被弃用。"
+msgstr "變體「%1」已被棄用。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:483
 #, no-c-format
@@ -13302,7 +13302,7 @@ msgstr "未使用与变体标签「%1」相匹配的前缀。匹配的前缀为:
 #: src/common/bcp47.cpp:460
 #, no-c-format
 msgid "The variant '{}' occurs more than once."
-msgstr "变体「{}」重复出现。"
+msgstr "變體「{}」重複出現。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:743
 #, no-c-format
@@ -13327,7 +13327,7 @@ msgstr "Theora"
 #: src/merge/mkvmerge.cpp:3116
 #, no-c-format
 msgid "There are no chapters in source files & chapter files."
-msgstr "输入文件及章节文件中没有章节。"
+msgstr "原始檔案及章節檔案中沒有章節。"
 
 #: src/extract/cues.cpp:54
 #, no-c-format
@@ -13846,7 +13846,7 @@ msgstr "軌道"
 #: src/mkvtoolnix-gui/forms/main_window/prefs_language_shortcut_dialog.h:115
 #, no-c-format
 msgid "Track &name (optional):"
-msgstr "轨道名称 (可选) (&N):"
+msgstr "軌道名稱 (可選) (&N):"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:306
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:64
@@ -13887,7 +13887,7 @@ msgstr "軌道表頭"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2104
 #, no-c-format
 msgid "Track name"
-msgstr "轨道名称"
+msgstr "軌道名稱"
 
 #: src/common/kax_element_names.cpp:188
 #: src/common/property_element.cpp:131
@@ -13899,7 +13899,7 @@ msgstr "軌道編號"
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:67
 #, no-c-format
 msgid "Track number for mkvpropedit:"
-msgstr "mkvpropedit 使用軌道編號:"
+msgstr "mkvpropedit 使用的軌道編號:"
 
 #: src/common/content_decoder.cpp:70
 #, no-c-format
@@ -14583,9 +14583,9 @@ msgid "Video: colour range"
 msgstr "視訊: 色彩範圍"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "水平 Cb 抽樣"
+msgstr "視頻: 水平 Cb 抽樣"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14593,9 +14593,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "視訊: 水平色度部屬"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "視訊: 水平色度部屬"
+msgstr "視頻: 水平色度抽樣"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14648,9 +14648,9 @@ msgid "Video: transfer characteristics"
 msgstr "視訊: 傳送類型"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "垂直 Cb 抽樣"
+msgstr "視頻: 垂直 Cb 抽樣"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14658,9 +14658,9 @@ msgid "Video: vertical chroma siting"
 msgstr "視訊: 垂直色度部屬"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "視訊: 垂直色度部屬"
+msgstr "視頻: 垂直色度抽樣"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
@@ -15176,7 +15176,7 @@ msgstr "可以省略 'HH' 小時數。"
 #: src/mkvtoolnix-gui/util/file_dialog.cpp:126
 #, no-c-format
 msgid "You must select an existing file."
-msgstr "您必须选择现有文件。"
+msgstr "必須選擇一個現有檔案。"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
@@ -15698,7 +15698,7 @@ msgstr "mkvmerge 不會辨別這兩個和簡易的區塊數量。"
 #: src/output/p_avc_hevc_es.cpp:97
 #, no-c-format
 msgid "mkvmerge encountered broken or unparsable data in this video track."
-msgstr "mkvmerge 在该视频轨道中遇到损坏或无法解析的数据。"
+msgstr "mkvmerge 在此視訊軌道中遇到損壞或無法解析的資料。"
 
 #: src/input/r_ogm.cpp:462
 #, no-c-format
