program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -14674,9 +14674,9 @@ msgid "Video: colour range"
 msgstr "Video: intervallo colore"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Campione Cb orizzontale"
+msgstr "Video: sottocampionamento Cb orizzontale"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14684,9 +14684,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "Video: posizione croma orizzontale"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Video: posizione croma orizzontale"
+msgstr "Video: sottocampionamento chroma orizzontale"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14739,9 +14739,9 @@ msgid "Video: transfer characteristics"
 msgstr "Video: caratteristiche trasferimento"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Campione Cb verticale"
+msgstr "Video: sottocampionamento Cb verticale"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14749,9 +14749,9 @@ msgid "Video: vertical chroma siting"
 msgstr "Video: posizione croma verticale"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Video: posizione croma verticale"
+msgstr "Video: sottocampionamento chroma verticale"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
