program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-04-26 23:25+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2022\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2019-2022\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -14460,9 +14460,9 @@ msgid "Video: colour range"
 msgstr "Видео: цветовой диапазон"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Горизонтальная подвыборка Cb"
+msgstr "Видео: горизонтальная субдискретизация Cb"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14470,9 +14470,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "Видео: горизонтальное расположение цветности"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Видео: горизонтальное расположение цветности"
+msgstr "Видео: горизонтальная субдискретизация цветности"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14525,9 +14525,9 @@ msgid "Video: transfer characteristics"
 msgstr "Видео: характеристики передачи"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Вертикальная подвыборка Cb"
+msgstr "Видео: вертикальная субдискретизация Cb"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14535,9 +14535,9 @@ msgid "Video: vertical chroma siting"
 msgstr "Видео: вертикальное расположение цветности"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Видео: вертикальное расположение цветности"
+msgstr "Видео: вертикальная субдискретизация цветности"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
