--- a/po/tr.po
+++ b/po/tr.po
@@ -14636,9 +14636,9 @@ msgid "Video: colour range"
 msgstr "Görüntü: renk paleti"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Yatay Cb alt örneği"
+msgstr "Görüntü: yatay Cb alt örneklemesi"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14646,9 +14646,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "Görüntü: yatay renk doygunluğu yerleşimi"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Görüntü: yatay renk doygunluğu yerleşimi"
+msgstr "Görüntü: yatay renk doygunluğu alt örneklemesi"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14701,9 +14701,9 @@ msgid "Video: transfer characteristics"
 msgstr "Görüntü: aktarım karakteristikleri"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Dikey Cb alt örneği"
+msgstr "Görüntü: dikey Cb alt örneklemesi"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14711,9 +14711,9 @@ msgid "Video: vertical chroma siting"
 msgstr "Görüntü: dikey renk doygunluğu yerleşimi"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Görüntü: dikey renk doygunluğu yerleşimi"
+msgstr "Görüntü: dikey renk doygunluğu alt örneklemesi"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
