man page translations: update Bulgarian

--- a/doc/man/po4a/po/bg.po
+++ b/doc/man/po4a/po/bg.po
@@ -36,10 +36,8 @@ msgstr "67.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-02-06"
 msgid "2022-03-13"
-msgstr "06.02.2022"
+msgstr "13.03.2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2613,10 +2611,8 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1163
 #: doc/man/mkvpropedit.xml:360
-#, fuzzy
-#| msgid "<option>--enable-durations</option>"
 msgid "<option>--enable-legacy-font-mime-types</option>"
-msgstr "<option>--enable-durations</option>"
+msgstr "<option>--enable-legacy-font-mime-types</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1166
