program translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -5955,9 +5955,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Трябва или да оправиш тази грешка, или да премахнеш конфигурацията преди да затвориш прозореца с настройки."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:915
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "Разделянето на пътечки от този тип не се поддържа."
+msgstr "А може и файловият формат или аудио кодекът да не са поддържани."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6164,7 +6164,7 @@ msgstr "Грешка при анализ на таговете при „{0}“:
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:926
 #, no-c-format
 msgid "Error playing audio"
-msgstr ""
+msgstr "Грешка при възпроизвеждане на аудиото"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8794,7 +8794,7 @@ msgstr ""
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "Устройството за възпроизвеждане не е налично или има проблем с достъпа до него."
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11800,9 +11800,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "Прикаченият файл ({0}) е твърде голям ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:912
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "XML таг файлът „{0}“ не може да бъде прочетен.\n"
+msgstr "Аудио файлът „%1“ cне може да бъде възпроизведен."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
