man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
 "POT-Creation-Date: 2022-03-28 19:05+0200\n"
-"PO-Revision-Date: 2022-05-04 21:03+0200\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2022\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
 "Language: es\n"
@@ -5205,7 +5205,7 @@ msgstr "Al editar etiquetas sólo se ven afectados los elementos de idioma de la
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:450
 msgid "The best way to normalize all existing language tags in a file is to remux it with &mkvmerge; and set its '<literal>--normalize-language-ietf</literal>' option to the desired mode."
-msgstr "La mejor forma de normalizar todas las etiquetas existentes de idioma en un archivo es volver a multiplexarlas con &mkvmerge; y configurarles su opción '<literal>--normalize-language-ietf</literal>' al modo deseado."
+msgstr "La mejor forma de normalizar todas las etiquetas de idioma existentes en un archivo es volver a multiplexarlas con &mkvmerge; y configurarles su opción '<literal>--normalize-language-ietf</literal>' al modo deseado."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:480
