program translations: update Chinese Traditional (Taiwan)

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8079,7 +8079,7 @@ msgstr "Kate 套件過小並將跳過。\n"
 #: src/extract/extract_cli_parser.cpp:80
 #, no-c-format
 msgid "Keep only the BlockAdditions up to this level (default: keep all levels)"
-msgstr "只維持 BlockAdditions 高於這個層級 (預設: 維持所有層級)"
+msgstr "只維持 BlockAdditions 不高於這個層級 (預設: 維持所有層級)"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:183
 #, no-c-format
