program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -4079,9 +4079,9 @@ msgid "Bits per channel"
 msgstr "Bits par canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Vidéo : bits par canal de couleur"
+msgstr "Bits par canal de couleur :"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4406,9 +4406,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Demande à mkvmerge d'écrire un second jeu identique d'entêtes de piste près de la fin du fichier (après toutes les grappes)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Vidéo : sous-échantillonnage Cb vertical"
+msgstr "Sous-échantillonnage Cb :"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:333
 #, no-c-format
@@ -4708,19 +4708,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Cocher cette option conduit l'interface à mettre cette compression à « Aucune » par défaut pour tous les types de piste lors de l'ajout de fichiers"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Vidéo : situation de la chroma"
+msgstr "Positionnement chroma :"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Vidéo : sous-échantillonnage chroma verticale"
+msgstr "Sous-échantillonnage chroma :"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Coordonnées de chromaticité :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2107
 #, no-c-format
@@ -4868,9 +4868,9 @@ msgid "Colour matrix coefficients"
 msgstr "Coefficients de la matrice de couleurs"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Coefficients de la matrice de couleurs"
+msgstr "Coefficients de la matrice de couleurs :"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4878,9 +4878,9 @@ msgid "Colour primaries"
 msgstr "Couleurs primaires"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Couleurs primaires"
+msgstr "Couleurs primaires :"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4888,9 +4888,9 @@ msgid "Colour range"
 msgstr "Limites de couleurs"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Limites de couleurs"
+msgstr "Plage de couleurs :"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8583,9 +8583,9 @@ msgid "Maximum content light"
 msgstr "Lumière maximale par contenu"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "Lumière maximale par contenu"
+msgstr "Lumière maximale par contenu :"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8593,9 +8593,9 @@ msgid "Maximum frame light"
 msgstr "Lumière maximale par trame"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "Lumière maximale par trame"
+msgstr "Lumière maximale par trame :"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8613,9 +8613,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminance maximale en candelas par mètre carré (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Luminance maximale"
+msgstr "Luminance maximale :"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8666,9 +8666,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminance minimale en candelas par mètre carré (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Luminance minimale"
+msgstr "Luminance minimale :"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9724,9 +9724,9 @@ msgid "Pending manual start"
 msgstr "Lancement manuel en attente"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "Rotation en tangage de la projection"
+msgstr "Rotation par tangage :"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -10037,9 +10037,9 @@ msgid "Projection type"
 msgstr "Type de projection"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Type de projection"
+msgstr "Type de projection :"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -10062,9 +10062,9 @@ msgid "Projection's yaw rotation"
 msgstr "Rotation en lacet de la projection"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Vidéo : données de projection spécifique"
+msgstr "Données de projection spécifique :"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10578,9 +10578,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Menu contextuel pour ajouter, concaténer et retirer des fichiers"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Durée :"
+msgstr "Rotation par roulis :"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14194,9 +14194,9 @@ msgid "Tracks:"
 msgstr "Pistes :"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Vidéo : caractéristiques du transfert"
+msgstr "Caractéristiques de transfert :"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -15084,9 +15084,9 @@ msgid "White colour coordinate y"
 msgstr "Coordonnées y couleur blanche"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Coordonnées x couleur blanche"
+msgstr "Coordonnées de couleur blanche :"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15219,9 +15219,9 @@ msgid "Xiph lacing"
 msgstr "Laçage Xiph"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Durée :"
+msgstr "Rotation par lacet :"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
