program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -4086,9 +4086,9 @@ msgid "Bits per channel"
 msgstr "Bit per canale"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Video: bit per colore canale"
+msgstr "Bit per canale colore:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4413,9 +4413,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Fa sì che mkvmerge scriva un secondo set di intestazioni di traccia identiche vicino alla fine del file (dopo tutti i cluster)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Video: sottocampionamento Cb verticale"
+msgstr "Sottocampionamento Cb:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:333
 #, no-c-format
@@ -4715,19 +4715,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Abilitando questa opzione sarà impostata la compressione predefinita a \"nessuna\" per tutte le tracce quando aggiungi un file."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Video: posizione chroma"
+msgstr "Localizzazione cromatica:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Video: sottocampionamento chroma verticale"
+msgstr "Sottocampionamento cromatico:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Coordinate cromatiche:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2107
 #, no-c-format
@@ -4875,9 +4875,9 @@ msgid "Colour matrix coefficients"
 msgstr "Coefficienti matrice colore"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Coefficienti matrice colore"
+msgstr "Coefficienti di matrice colore:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4885,9 +4885,9 @@ msgid "Colour primaries"
 msgstr "Colori primari"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Colori primari"
+msgstr "Colori primari:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4895,9 +4895,9 @@ msgid "Colour range"
 msgstr "Intervallo colore"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Intervallo colore"
+msgstr "Intervallo colore:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8592,9 +8592,9 @@ msgid "Maximum content light"
 msgstr "Luminosità massima contenuto"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "Luminosità massima contenuto"
+msgstr "Luce massima contenuto:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8602,9 +8602,9 @@ msgid "Maximum frame light"
 msgstr "Luminosità massima frame"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "Luminosità massima frame"
+msgstr "Luce massima fotogramma:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8622,9 +8622,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminanza massima in candele per metro quadro (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Luminanza massima"
+msgstr "Luminanza massima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8675,9 +8675,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminanza minima in candele per metro quadro (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Luminanza minima"
+msgstr "Luminanza minima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9733,9 +9733,9 @@ msgid "Pending manual start"
 msgstr "Pendente avvio manuale"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "Passo rotazione proiezione"
+msgstr "Rotazione campo:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -10047,9 +10047,9 @@ msgid "Projection type"
 msgstr "Tipo proiezione"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Tipo proiezione"
+msgstr "Tipo di proiezione:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -10072,9 +10072,9 @@ msgid "Projection's yaw rotation"
 msgstr "Spostamento rotazione proiezione"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Video: dati specifici proiezione"
+msgstr "Dati specifici proiezione:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10588,9 +10588,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Tasto destro per aggiungere, appendere e rimuovere file"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Durata:"
+msgstr "Rotazione rullino:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14214,9 +14214,9 @@ msgid "Tracks:"
 msgstr "Tracce:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Video: caratteristiche trasferimento"
+msgstr "Caratteristiche di trasferimento:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -15104,9 +15104,9 @@ msgid "White colour coordinate y"
 msgstr "Coordinata y colore bianco"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Coordinata x colore bianco"
+msgstr "Coordinate colore bianco:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15239,9 +15239,9 @@ msgid "Xiph lacing"
 msgstr "Collegamento Xiph"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Durata:"
+msgstr "Rotazione Yaw:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
