program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-05-13 19:38+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2022\n"
+"Last-Translator: Andrei Stepanov, 2018-2022\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -3853,9 +3853,9 @@ msgid "Bits per channel"
 msgstr "Бит на канал"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Видео: бит на цветовой канал"
+msgstr "Бит на цветовой канал:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4182,9 +4182,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Указывает mkvmerge записывать второй набор одинаковых заголовков дорожек в конце файла (после всех кластеров)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Видео: вертикальная субдискретизация Cb"
+msgstr "Субдискретизация Cb:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:333
 #, no-c-format
@@ -4486,19 +4486,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Включение этой функции устанавливает сжатие в положение \"нет\" по умолчанию для всех типов дорожек при добавлении файлов."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Видео: расположение цветности"
+msgstr "Расположение цветности:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Видео: вертикальная субдискретизация цветности"
+msgstr "Субдискретизация цветности:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Координаты цветности:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2107
 #, no-c-format
@@ -4646,9 +4646,9 @@ msgid "Colour matrix coefficients"
 msgstr "Коэффициенты цветовой матрицы"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Коэффициенты цветовой матрицы"
+msgstr "Коэффициенты цветовой матрицы:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4656,9 +4656,9 @@ msgid "Colour primaries"
 msgstr "Базовый цвет"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Базовый цвет"
+msgstr "Основные цвета:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4666,9 +4666,9 @@ msgid "Colour range"
 msgstr "Цветовой диапазон"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Цветовой диапазон"
+msgstr "Цветовой диапазон:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8365,9 +8365,9 @@ msgid "Maximum content light"
 msgstr "Максимальная освещённость"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "Максимальная освещённость"
+msgstr "Максимальная освещённость:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8375,9 +8375,9 @@ msgid "Maximum frame light"
 msgstr "Максимальная освещённость кадра"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "Максимальная освещённость кадра"
+msgstr "Максимальная освещённость кадра:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8395,9 +8395,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Максимальная яркость в канделах на квадратный метр (кд/м²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Максимальная яркость"
+msgstr "Максимальная яркость:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8448,9 +8448,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Минимальная яркость в канделах на квадратный метр (кд/м²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Минимальная яркость"
+msgstr "Минимальная яркость:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9516,9 +9516,9 @@ msgid "Pending manual start"
 msgstr "Отложенный ручной запуск"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "Поперечное вращение проекции"
+msgstr "Тангаж:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -9835,9 +9835,9 @@ msgid "Projection type"
 msgstr "Тип проекции"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Тип проекции"
+msgstr "Тип проекции:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -9860,9 +9860,9 @@ msgid "Projection's yaw rotation"
 msgstr "Перпендикулярное вращение проекции"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Видео: данные, относящиеся к проекции"
+msgstr "Данные, относящиеся к проекции:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10376,9 +10376,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Щёлкните правой кнопкой мыши, чтобы добавить, присоединить или удалить файлы"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Длительность:"
+msgstr "Крен:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14000,9 +14000,9 @@ msgid "Tracks:"
 msgstr "Дорожки:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Видео: характеристики передачи"
+msgstr "Характеристики передачи:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -14890,9 +14890,9 @@ msgid "White colour coordinate y"
 msgstr "Координата Y белого цвета"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Координата X белого цвета"
+msgstr "Координаты белого цвета:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15025,9 +15025,9 @@ msgid "Xiph lacing"
 msgstr "Xiph-сшивание"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Длительность:"
+msgstr "Рыскание:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
